--- a/project/server_servlet/pom.xml
+++ b/project/server_servlet/pom.xml
@@ -19,6 +19,11 @@
             <version>6.0</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.utbm.lo53</groupId>
+            <artifactId>server_core</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
